[package]
name = "toolapi-py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
num-complex = "0.4.6"
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py39"] }
# toolapi = { path  = "../toolapi" }
toolapi = { git = "https://github.com/mrx-org/toolapi.git" }
