[project]
name = "toolapi"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
test = ["mrzerocore>=0.2.4"]

[tool.maturin]
module-name = "toolapi._core"
python-packages = ["toolapi"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[tool.uv.workspace]
members = [
    "test",
    ".",
]

[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"
